--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Online client for Discord webhooks</title>
     <meta name="language" content="en-US">
     <meta name="author" content="Yağızhan Burak Yakar (evrifaessa), https://github.com/evrifaessa">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#7289da">
+    <meta name="msapplication-config" content="./assets/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A minimal online application to interact with Discord webhooks easily.">
     <meta name="keywords" content="evrifaessa, webhook, online, client, discord, discordapp">
