--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
+    <link rel="canonical" href="https://discord-webhook.js.org">
     <style>
       .bd-placeholder-img {
       font-size: 1.125rem;
