--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <meta name="description" content="A minimal online application to interact with Discord webhooks easily.">
     <meta name="keywords" content="evrifaessa, webhook, online, client, discord, discordapp">
     <meta name="title" content="Online client for Discord webhooks">
+    <meta name="color-scheme" content="light dark">
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="./assets/css/fontawesome.min.css" rel="stylesheet">
+    <!-- Custom styles -->
+    <link href="./assets/css/styles.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
@@ -23,20 +26,6 @@
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
     <link rel="canonical" href="https://discord-webhook.js.org">
-    <style>
-      .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-      }
-      @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-      }
-      }
-    </style>
     <!-- Custom styles for this template -->
     <link href="./assets/css/form-validation.css" rel="stylesheet">
   </head>
@@ -52,7 +41,7 @@
         <div class="row g-3">
           <div class="col-md-5 col-lg-4 order-md-last">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
-              <span class="text-muted">Preview</span>
+              <span>Preview</span>
             </h4>
             <ul class="list-group mb-3">
               <li id="preview-block" class="list-group-item d-flex justify-content-between lh-sm" style="background-color: #222; color: #ffffff!important;">
