--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row g-3">
           <div class="col-md-5 col-lg-4 order-md-last">
             <h4 class="d-flex justify-content-between align-items-center mb-3">
-              <span>Preview</span>
+              <span id="preview-label">Preview</span>
             </h4>
             <ul class="list-group mb-3">
               <li id="preview-block" class="list-group-item d-flex justify-content-between lh-sm" style="background-color: #222; color: #ffffff!important;">
