Adding a preloader, it's useful to have one as the site may look weird before bootstrap and other dependencies were loaded.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link href="./assets/css/form-validation.css" rel="stylesheet">
   </head>
   <body class="bg-light">
+    <div class="preloader"></div>
     <div class="container">
       <main>
         <div class="py-5 text-center">
