--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="color-scheme" content="light dark">
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Form validation -->
+    <link href="./assets/css/form-validation.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="./assets/css/fontawesome.min.css" rel="stylesheet">
     <!-- Custom styles -->
@@ -26,8 +28,6 @@
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
     <link rel="canonical" href="https://discord-webhook.js.org">
-    <!-- Custom styles for this template -->
-    <link href="./assets/css/form-validation.css" rel="stylesheet">
   </head>
   <body class="bg-light">
     <div class="preloader"></div>
