--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
               <div class="row g-3">
                 <div class="col-12">
                   <label for="url" class="form-label">Webhook address</label>
-                  <input type="url" class="form-control" id="url" placeholder="https://discord.com/api/webhooks/123/abc" required>
-                  <div class="invalid-feedback">
+                  <div class="input-group">
+                    <span class="input-group-text">https://discord.com/api/webhooks/</span>
+                    <input type="text" class="form-control" id="url" onkeyup="clearURL();" placeholder="123/abc" required>
+                    <div class="invalid-feedback">
                     Please enter a valid URL for your webhook.
+                    </div>
                   </div>
                 </div>
                 <div class="col-12">
