--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                   <div class="input-group">
                     <span class="input-group-text">https://discord.com/api/webhooks/</span>
                     <input type="text" class="form-control" id="url" onkeyup="clearURL();" placeholder="123/abc" required>
+                    <div class="input-group-append">
+                      <button class="btn btn-dark" id="retreive" type="button">Retreive</button>
+                    </div>
                     <div class="invalid-feedback">
                     Please enter a valid URL for your webhook.
                     </div>
