--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="container">
       <main>
         <div class="py-5 text-center">
-          <h2><i class="fab fa-discord"></i><br />Online client for Discord webhooks</h2>
-          <p class="lead"><b>Below is an interface that lets you interact with Discord webhooks right in your browser.</b><br />Looking for technical documentation about webhooks? See Discord's official guide <a href="https://discord.com/developers/docs/resources/webhook">here</a>.</p>
+          <h1><i class="fab fa-discord"></i><br />Online client for Discord webhooks</h1>
+          <h2 class="lead"><b>Below is an interface that lets you interact with Discord webhooks right in your browser.</b><br />Looking for technical documentation about webhooks? See Discord's official guide <a href="https://discord.com/developers/docs/resources/webhook">here</a>.</h2>
           <a class="github-button" href="https://github.com/evrifaessa/discord-webhook" data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star" data-show-count="true" aria-label="Star evrifaessa/discord-webhook on GitHub">Star</a>
         </div>
         <div id="alert-placeholder"></div>
