--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
     <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
     <link rel="canonical" href="https://discord-webhook.js.org">
+    
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://discord-webhook.js.org">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="discord-webhook.js.org">
+    <meta property="og:description" content="A minimal online application to interact with Discord webhooks easily.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/evrifaessa/discord-webhook/master/assets/images/placeholder.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="discord-webhook.js.org">
+    <meta property="twitter:url" content="https://discord-webhook.js.org">
+    <meta name="twitter:title" content="discord-webhook.js.org">
+    <meta name="twitter:description" content="A minimal online application to interact with Discord webhooks easily.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/evrifaessa/discord-webhook/master/assets/images/placeholder.png">
   </head>
   <body class="bg-light">
     <div class="preloader"></div>
