--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="msapplication-config" content="./assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A minimal online application to interact with Discord webhooks easily.">
-    <meta name="keywords" content="evrifaessa, webhook, online, client, discord, discordapp">
+    <meta name="description" content="A minimal online application to interact with Discord webhooks easily. You cand send stuff to Discord webhooks right inside your browser using this website.">
+    <meta name="keywords" content="evrifaessa, webhook, online, client, discord, discordapp, sender, send, channel">
     <meta name="title" content="Online client for Discord webhooks">
     <meta name="color-scheme" content="light dark">
     <!-- Bootstrap core CSS -->
