--- a/404.html
+++ b/404.html
@@ -1,1 +1,37 @@
-<iframe src="https://notfound-static.fwebservices.be/en/404?key=5fe05fe53fb04" width="100%" height="650" frameborder="0"></iframe>
+<!doctype html>
+<html lang="en">
+  <head>
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6YZQLM8S1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-E6YZQLM8S1');
+    </script>
+    <meta charset="utf-8">
+    <title>Page not found, neither is the missing children.</title>
+    <meta name="language" content="en-US">
+    <meta name="author" content="Yağızhan Burak Yakar (evrifaessa), https://github.com/evrifaessa">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Page not found, neither is the missing children. We made better use of our 404-page by publishing this picture of a missing child with the help of Missing Children Europe.">
+    <meta name="title" content="Page not found, neither is the missing children.">
+    <meta name="color-scheme" content="light dark">
+    <!-- Bootstrap core CSS -->
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Form validation -->
+    <link href="./assets/css/form-validation.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="./assets/css/fontawesome.min.css" rel="stylesheet">
+    <!-- Custom styles -->
+    <link href="./assets/css/styles.css" rel="stylesheet">
+  </head>
+
+  <body class="bg-dark">
+    <iframe src="https://notfound-static.fwebservices.be/en/404?key=5fe05fe53fb04" width="100%" height="650" class="bg-dark" frameborder="0"></iframe>
+    <center>
+      <h2>➔ <a href="/" style="color: #FFF;">Go back to home.</a></h2>
+    </center>
+</body>
+</html>
