--- a/index.html
+++ b/index.html
@@ -144,5 +144,6 @@
     <script src="./assets/js/discord-markdown.min.js"></script>
     <script src="./assets/js/main.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script data-ad-client="ca-pub-0208503425024645" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </body>
 </html>
